agregamos section nosotros con eror

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="contenedorNav">
         <ul class="navFlex " >
-            <li class="li1"  id="animar1">Home</li>
+            <li class="li1">Home</li>
             <li class="li1"  id="animar2">Nosotros</li>
             <li class="li1"  id="animar3">Hoteles</li>
             <li class="li1"  id="animar4">Paquetes</li>
@@ -57,35 +57,33 @@
     </section>
 
 
+         <section id="sectionNosotros" class="title">
 
-
-    <section id="sectionNosotros">
         <h1> Nosotros</h1>
+        <tr id="usuarios">
+            <td>
+
+            </td>
+        </tr>
 
     </section>
 
-    <section id="sectionHoteles"> 
+    </script>
+
+
+    <section id="sectionHoteles"  class="title"> 
 
         <h1> Hoteles</h1>
 
     </section>
-        
 
-       
-
-
-    <section id="sectionPaquetes">
+    <section id="sectionPaquetes"  class="title">
 
         <h1> Paquetes</h1>
 
-        <img src="" alt=""> 
-        <img src="" alt="">
-        <img src="" alt=""> 
-        <img src="" alt="">
-
     </section>
 
-    <section id="sectionContacto">
+    <section id="sectionContacto"  class="title" >
 
         <h1> Contacto</h1>
 
